2015-01-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_hrules): using
	skipscale for horizontal rules (requires rrdtool-1.4.8 or newer)

2014-12-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/F5BigIp.pm: added system performance
	statistics and 64-bit interface counters

2014-12-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	new discovery parameter: RFC2863_IF_MIB::disable-all

2014-12-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm: now hrules are drawn with
	semi-transparent LINE1

	* xmlconfig/defaults.xml: two new horizontal rules: warn-level,
	crit-level

2014-12-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/defaults.xml: moved monitor-period and
	monitor-timeoffset from snmp-defs.xml

	* bin/monitor.in: new CLI option: --runalways

	* configs/torrus-config.pl: new configuration parameters:
	$Torrus::Collector::runAlways = 0;
	$Torrus::Monitor::runAlways = 0;

2014-11-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoGeneric.pm: added support for
	CISCO-SYSTEM-EXT-MIB (mainly needed for Cisco Nexus)

2014-11-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Albis_ULAF.pm (discover):
	new discovery parameter: Albis_ULAF::mp-name-filter

	* perllib/Torrus/DevDiscover/CiscoIOS.pm: support for Cisco Nexus;
	persistent ifIndex for Nexus

2014-10-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Fortinet.pm: new discovery module for
	Fortinet products

2014-10-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Torrus release 2.08

2014-09-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm: Bugfix in discovery